--- a/views/new.ejs
+++ b/views/new.ejs
@@ -53,7 +53,11 @@
             ></textarea>
         </div>
         <br />
-        <input class="col-3 btn btn-primary" type="submit" value="Submit" />
+        <input
+            class="col-3 btn btn-primary mb-5"
+            type="submit"
+            value="Submit"
+        />
     </form>
 </div>
 <%- include('./footer.ejs') %>
