alerts and error handling added

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,5 +1,7 @@
 <%- include('./header.ejs') %> <%- include('./navbar.ejs') %>
 <div class="container mt-5">
+    <%- include('./alert') %>
+
     <div class="card mb-3">
         <img
             src="<%= blog.image %>"
