--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,8 +1,8 @@
 <%- include('./header.ejs') %> <%- include('./navbar.ejs') %>
 <div class="container mt-5">
+    <%- include('./alert') %>
     <div class="row">
         <% for(let c of blogs) {%>
-
         <div class="card mb-3">
             <div class="row g-0">
                 <div class="col-md-3 col-lg-3">
